Set up the bot to connect to discord
- Add discord.js
- Add dotenv

--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/MatMoore/thejudge/issues"
   },
-  "homepage": "https://github.com/MatMoore/thejudge#readme"
+  "homepage": "https://github.com/MatMoore/thejudge#readme",
+  "dependencies": {
+    "discord.js": "^12.2.0",
+    "dotenv": "^8.2.0"
+  }
 }
